2009-01-27 yusei
* Added invoice_transmission_mode category.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-16 Kazuhiko
* revise payment_transaction_builder, purchase_invoice_builder, purchase_invoice_tax_builder, purchase_invoice_transaction_builder, sale_invoice_builder, sale_invoice_tax_builder and sale_invoice_transaction_builder using new API.

2008-09-04 yusei
* Update English messages.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation string.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-3-18 jerome
* Use trade conditions with invoices
* version 5.0

2008-3-16 nicolas
* add Print action for Invoices

2003-03-12 jerome
* Cleanup forms and add proxy fields

2007-12-06 kazuhiko
* use related_simulation_movement_path_list to reduce activity dependencies.

2007-12-6 jerome
* initial creation, from splitting erp5_accounting