@@ -1,3 +1,6 @@
+2009-02-03 yo
+* Editable fields must use "cell" instead of "here" in the tales expressions, so they may not use proxy fields created for my_* intact. Due to this error, total_price and total_quantity could be wrongly displayed.
+
 2009-01-27 yusei
 * Added invoice_transmission_mode category.
 
